# Kiryu

./: .gitmodules  CMakeLists.txt  possibilities
ext/: CMakeLists.txt
include/kiryu/: aabb.h  accel.h  bruteAccel.h  common.h  image.h  integrator.h  kdtree.h  mesh.h  normalIntegrator.h  parser.h  qbvh.h  ray.h  render.h  rng.h  scene.h  screen.h  sensor.h  vector.h
res/: base.json
src/: accel.cpp  bruteAccel.cpp  image.cpp  integrator.cpp  kdtree.cpp  main.cpp  mesh.cpp  normalIntegrator.cpp  parser.cpp  qbvh.cpp  render.cpp  rng.cpp  scene.cpp  screen.cpp  sensor.cpp
